# SPDX-License-Identifier: MIT
#
# C ABI shim over the C++23 mango-option pricing library.
#
# Linking C++ archives from Rust requires working around a GNU ld issue where
# --as-needed (passed by the Rust toolchain) + --gc-sections causes the linker
# to pre-scan dynamic libraries for GC before applying --as-needed at each -l
# flag position. The result: libm and libgcc_s are marked "not needed" at the
# -lm position (before the C++ archives introduce exp/log references), so they
# are excluded from the final link even though the archives need them.
#
# Fixes applied:
#   libstdcpp_static: static libstdc++.a avoids sysroot-relative .so resolution
#   mango_c_api linkopts: --no-as-needed for libm.so.6 and libgcc_s.so.1 so
#     they're always linked regardless of --as-needed state
#   libgcc_cpuinfo: cpuinfo.o from libgcc.a (not trackable as libgcc.a via Bazel
#     input declarations) provides __cpu_indicator_init and __cpu_model needed
#     by [[gnu::target_clones]] multi-versioned functions
#
# GCC's own library paths (libstdc++.a, libgcc.a) are discovered at build time
# via `gcc -print-file-name=...` so they are not pinned to a GCC version. The
# libm.so.6 / libgcc_s.so.1 linkopts below use the Debian/Ubuntu x86-64 multiarch
# location, which is not GCC-version-specific.

genrule(
    name = "copy_libstdcpp",
    srcs = [],
    outs = ["libstdc++.a"],
    cmd = "cp \"$$(gcc -print-file-name=libstdc++.a)\" $@",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libstdcpp_static",
    static_library = ":copy_libstdcpp",
    visibility = ["//visibility:public"],
)

# Extract cpuinfo.o from libgcc.a so Bazel declares it as a tracked input.
# libgcc.a as an absolute-path linkopts entry would not be tracked by Bazel
# and fails to link in the sandbox (the symbol is silently missing).
# cpuinfo.o defines __cpu_indicator_init and __cpu_model, both required by
# the [[gnu::target_clones]] resolver trampolines generated by GCC.
genrule(
    name = "extract_cpuinfo",
    srcs = [],
    outs = ["cpuinfo.o"],
    cmd = "ar x \"$$(gcc -print-file-name=libgcc.a)\" cpuinfo.o --output=$(RULEDIR)",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libgcc_cpuinfo",
    objects = [":extract_cpuinfo"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "mango_c_api",
    srcs = ["mango_c_api.cpp"],
    hdrs = ["mango_c_api.h"],
    strip_include_prefix = "/src/ffi",
    include_prefix = "mango/ffi",
    copts = ["-Wall", "-Wextra", "-Werror", "-O3", "-fopenmp", "-DHAVE_SYSTEMTAP_SDT"],
    # Use absolute paths to the real ELF shared libraries (bypassing linker
    # scripts at /usr/lib/x86_64-linux-gnu/libm.so and libgcc_s.so that fail
    # under the Rust toolchain's --sysroot). --no-as-needed forces these to be
    # linked regardless of whether they're "needed" at the flag position.
    linkopts = [
        "-fopenmp",
        "-Wl,--no-as-needed",
        "/lib/x86_64-linux-gnu/libm.so.6",
        "/lib/x86_64-linux-gnu/libgcc_s.so.1",
        "-Wl,--as-needed",
    ],
    deps = [
        "//src/option:american_option",
        "//src/option:iv_solver",
        "//src/option:option_spec",
        "//src/option:yield_curve",
    ],
    visibility = ["//visibility:public"],
)
