cc_library(
    name = "lapack_banded_layout",
    hdrs = ["lapack_banded_layout.hpp"],
    deps = ["@mdspan//:mdspan"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "root_finding",
    hdrs = ["root_finding.hpp"],
    deps = [
        "//common:ivcalc_trace_hdr",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "tridiagonal_matrix_view",
    hdrs = ["tridiagonal_matrix_view.hpp"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "thomas_solver",
    hdrs = ["thomas_solver.hpp"],
    deps = [":tridiagonal_matrix_view"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cubic_spline_solver",
    hdrs = ["cubic_spline_solver.hpp"],
    deps = [
        ":thomas_solver",
        "//src/support:parallel",
    ],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_basis",
    hdrs = ["bspline_basis.hpp"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "banded_matrix_solver",
    hdrs = ["banded_matrix_solver.hpp"],
    deps = [
        ":lapack_banded_layout",
        "//src/support:parallel",
        "@mdspan//:mdspan",
    ],
    linkopts = ["-llapacke"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_collocation",
    hdrs = ["bspline_collocation.hpp"],
    deps = [
        ":banded_matrix_solver",
        ":bspline_basis",
        "//src/support:parallel",
    ],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_nd",
    hdrs = ["bspline_nd.hpp"],
    deps = [
        ":bspline_basis",
        "@mdspan//:mdspan",
    ],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_nd_separable",
    hdrs = ["bspline_nd_separable.hpp"],
    deps = [
        ":bspline_collocation",
        "//src/support:parallel",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"],
    visibility = ["//visibility:public"],
)
