# Export headers for packaging
exports_files(glob(["*.hpp"]))

filegroup(
    name = "public_headers",
    srcs = glob(["*.hpp"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "safe_math",
    hdrs = ["safe_math.hpp"],
    deps = ["//src/support:error_types"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "yield_curve",
    hdrs = ["yield_curve.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lapack_banded_layout",
    hdrs = ["lapack_banded_layout.hpp"],
    deps = ["@mdspan//:mdspan"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "root_finding",
    hdrs = ["root_finding.hpp"],
    deps = [
        "//src/support:ivcalc_trace_hdr",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "tridiagonal_matrix_view",
    hdrs = ["tridiagonal_matrix_view.hpp"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "thomas_solver",
    hdrs = ["thomas_solver.hpp"],
    deps = [":tridiagonal_matrix_view"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cubic_spline_solver",
    hdrs = ["cubic_spline_solver.hpp"],
    deps = [
        ":thomas_solver",
        "//src/support:parallel",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_basis",
    hdrs = ["bspline_basis.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "banded_matrix_solver",
    hdrs = ["banded_matrix_solver.hpp"],
    deps = [
        ":lapack_banded_layout",
        "//src/support:parallel",
        "@mdspan//:mdspan",
    ],
    linkopts = ["-llapacke"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_collocation_workspace",
    hdrs = ["bspline_collocation_workspace.hpp"],
    deps = [
        ":lapack_banded_layout",
        "//src/support:lifetime",
        "//src/support:error_types",
        "@mdspan//:mdspan",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_collocation",
    hdrs = ["bspline_collocation.hpp"],
    deps = [
        ":banded_matrix_solver",
        ":bspline_basis",
        ":bspline_collocation_workspace",
        "//src/support:error_types",
        "//src/support:parallel",
    ],
    linkopts = ["-llapacke"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_nd",
    hdrs = ["bspline_nd.hpp"],
    deps = [
        ":bspline_basis",
        ":safe_math",
        "//src/support:error_types",
        "@mdspan//:mdspan",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_nd_separable",
    hdrs = ["bspline_nd_separable.hpp"],
    deps = [
        ":bspline_collocation",
        ":bspline_collocation_workspace",
        ":safe_math",
        "//src/support:parallel",
        "//src/support:thread_workspace",
        "@mdspan//:mdspan",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"],
    visibility = ["//visibility:public"],
)
