# SPDX-License-Identifier: MIT
# Export headers for packaging
exports_files(glob(["*.hpp"]))

filegroup(
    name = "public_headers",
    srcs = glob(["*.hpp"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "safe_math",
    hdrs = ["safe_math.hpp"],
    deps = ["//src/support:error_types"],
    visibility = ["//visibility:public"],
    strip_include_prefix = "/src/math",
    include_prefix = "mango/math",
)

cc_library(
    name = "lapack_banded_layout",
    hdrs = ["lapack_banded_layout.hpp"],
    deps = ["@mdspan//:mdspan"],
    visibility = ["//visibility:public"],
    strip_include_prefix = "/src/math",
    include_prefix = "mango/math",
)

cc_library(
    name = "root_finding",
    hdrs = ["root_finding.hpp"],
    deps = [
        "//src/support:ivcalc_trace_hdr",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    visibility = ["//visibility:public"],
    strip_include_prefix = "/src/math",
    include_prefix = "mango/math",
)

cc_library(
    name = "tridiagonal_matrix_view",
    hdrs = ["tridiagonal_matrix_view.hpp"],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
    strip_include_prefix = "/src/math",
    include_prefix = "mango/math",
)

cc_library(
    name = "thomas_solver",
    hdrs = ["thomas_solver.hpp"],
    deps = [":tridiagonal_matrix_view"],
    visibility = ["//visibility:public"],
    strip_include_prefix = "/src/math",
    include_prefix = "mango/math",
)

cc_library(
    name = "cubic_spline_solver",
    hdrs = ["cubic_spline_solver.hpp"],
    deps = [
        ":thomas_solver",
        "//src/support:parallel",
    ],
    visibility = ["//visibility:public"],
    strip_include_prefix = "/src/math",
    include_prefix = "mango/math",
)

cc_library(
    name = "banded_matrix_solver",
    hdrs = ["banded_matrix_solver.hpp"],
    deps = [
        ":lapack_banded_layout",
        "//src/support:parallel",
        "@mdspan//:mdspan",
    ],
    linkopts = ["-llapacke"],
    visibility = ["//visibility:public"],
    strip_include_prefix = "/src/math",
    include_prefix = "mango/math",
)

cc_library(
    name = "latin_hypercube",
    hdrs = ["latin_hypercube.hpp"],
    visibility = ["//visibility:public"],
    strip_include_prefix = "/src/math",
    include_prefix = "mango/math",
)
