cc_library(
    name = "grid_spacing",
    hdrs = ["grid_spacing.hpp"],
    deps = ["//src:grid"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "centered_difference",
    hdrs = ["centered_difference.hpp"],
    deps = [
        ":grid_spacing",
        "//src:parallel",
    ],
    copts = ["-std=c++23", "-fopenmp-simd"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "black_scholes_pde",
    hdrs = ["black_scholes_pde.hpp"],
    deps = [":grid_spacing"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "laplacian_pde",
    hdrs = ["laplacian_pde.hpp"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spatial_operator",
    hdrs = ["spatial_operator.hpp"],
    deps = [
        ":grid_spacing",
        ":centered_difference",
        "//src:grid",
        "//src:jacobian_view",
    ],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "operator_factory",
    hdrs = ["operator_factory.hpp"],
    deps = [
        ":spatial_operator",
        ":grid_spacing",
        "//src:grid",
    ],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)
